mp12/nightly.txt
Compilation Results:
********************
In file included from main.cpp:3:0:
shape.hpp: In function ‘std::list<Shape*> CreateShapes(char*)’:
shape.hpp:235:19: error: right operand of comma operator has no effect [-Werror=unused-value]
    ifs >> in1, in2;
                   ^
shape.hpp:244:21: error: right operand of comma operator has no effect [-Werror=unused-value]
    ifs >> in1, in2, in3;
                     ^
shape.hpp:244:24: error: right operand of comma operator has no effect [-Werror=unused-value]
    ifs >> in1, in2, in3;
                        ^
cc1plus: all warnings being treated as errors
shape.hpp: In function ‘std::list<Shape*> CreateShapes(char*)’:
shape.hpp:235:19: error: right operand of comma operator has no effect [-Werror=unused-value]
    ifs >> in1, in2;
                   ^
shape.hpp:244:21: error: right operand of comma operator has no effect [-Werror=unused-value]
    ifs >> in1, in2, in3;
                     ^
shape.hpp:244:24: error: right operand of comma operator has no effect [-Werror=unused-value]
    ifs >> in1, in2, in3;
                        ^
cc1plus: all warnings being treated as errors
make: *** [student] Error 1
 

 ------------------- Begin Verifying MP12 ---------------------
Maxarea() or constructors are incorrect
MaxVolume() or Constructors are incorrect
CreateShape() or getName() incorrect
getName() 6/6
Rectangle: 16/16
Circle: 16/16
Sphere: 16/16
RectPrism: 16/16
MaxArea(): 0/10
MaxVolume(): 0/10
CreateShape() 0/10
Your total Score for MP12: 70/100
-------------------- End Verifying MP12 ----------------------



Failed the nightly test.
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2022-04-26_00:17:29
